<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
         or something similar.
    -->
    <string name="app_name">Cozy Weather</string>

    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="action_delete_city">Delete this city</string>

    <!-- Menu label -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_current_location">Current Location</string>
    <string name="search_hint">Search City Name</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_city_names_set_key" translatable="false">city_names_set_key</string>
    <string name ="pref_city_names_size" translatable="false">pref_city_names_size</string>
    <string name="pref_city_name_index" translatable="false">pref_city_name_index</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">San Jose</string>

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_weather_units_label_celsius">\u2103 (Celsius)</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_weather_units_label_imperial">\u2109 (Fahrenheit)</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_weather_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_weather_units_celsius" translatable="false">celsius</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_weather_units_fahrenheit" translatable="false">fahrenheit</string>

    <!-- Value in SharedPreferences for notification  -->
    <string name = "pref_notification_city_key" translatable="false">notification_city_key</string>
    <string name ="pref_notification_city_title">Notification City</string>
    <string name = "pref_notification_type_key" translatable="false">notification_type_key</string>
    <string name="pref_notification_type_title">Notification Frequency</string>
    <string name="pref_notification_type_label_always">Always</string>
    <string name="pref_notification_type_label_daily">Daily</string>
    <string name="pref_notification_type_label_smart">Only notify on bad weather</string>

    <string name="pref_notification_type_always" translatable="false">always</string>
    <string name="pref_notification_type_daily" translatable="false">daily</string>
    <string name="pref_notification_type_smart" translatable="false">smart</string>




    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Strings for displaying image owner's name -->
    <string name="format_image_owner">Photo by <xliff:g id="owner">%s</xliff:g> from Panoramio</string>


    <!-- Wind speed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Cloudiness format -->
    <string name="format_cloudiness">Cloudiness: <xliff:g id="cloudiness">%1.0f</xliff:g> %%</string>

    <!-- Font Family-->
    <string name="condensed" translatable="false">sans-serif-condensed</string>
    <string name="light" translatable="false">sans-serif-light</string>
    <string name="thin" translatable="false">sans-serif-thin</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">weather.dilyar.com</string>
    <string name="content_authority">com.dilyar.weather.app</string>

    <!-- MyNotification Format -->
    <string name="format_notification">Temperature:
         <xliff:g id="temp">%1$s</xliff:g> \u0020 \u0020<xliff:g id="condition">%2$s</xliff:g>.</string>

    <!-- Strings related to MyNotification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to MyNotification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="empty_list_string">No weather information available</string>


    <!-- Strings used when displaying the state of the UserLocation in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location..(<xliff:g id="location_setting">%1$s</xliff:g>)"</string>



    <!-- Strings related to Location  -->
    <string name="pref_location_status_key" translatable="false">location_status_key</string>
    <string name="pref_location_lat_key" translatable="false">location_lat_key</string>
    <string name="pref_location_lon_key" translatable="false">location_lon_key</string>
    <string name="search_title">Search City</string>
    <string name="pref_notification_category_label">Notification</string>
    <string name="pref_notification_category_key"  translatable="false">pref_notification_category_key</string>
    <string name="pref_unit_category_label">Units</string>
    <string name="pref_unit_category_key"  translatable="false">pref_unit_category_key</string>
    <string name="pref_wind_units_kmh">pref_wind_kmh</string>
    <string name="pref_wind_units_key"  translatable="false">pref_wind_units_key</string>
    <string name="pref_wind_units_label">Wind Speed Units</string>
    <string name="pref_wind_units_label_kmh">km/h</string>
    <string name="pref_wind_units_label_mph">mph</string>
    <string name="pref_wind_units_mph">pref_mph</string>
    <string name="pref_data_sync_frequency_key"  translatable="false">pref_data_update_frequency_key</string>
    <string name="pref_data_sync_frequency_label">Weather Update Frequency</string>
    <string name="pref_data_sync_3_hour_label">3 hours</string>
    <string name="pref_data_sync_6_hour_label">6 hours</string>
    <string name="pref_data_sync_12_hour_label">12 hours</string>
    <string name="pref_data_sync_manually_label">Manually</string>
    <string name="pref_data_category_key"  translatable="false">pref_data_category</string>
    <string name="pref_network_category_label">Network</string>
    <string name="pref_data_sync_6" translatable="false">6</string>
    <string name="pref_data_sync_12" translatable="false">12</string>
    <string name="pref_data_sync_manually" translatable="false">0</string>
    <string name="pref_data_sync_3_hour" translatable="false">3</string>
    <string name="pref_data_sync_default_value" translatable="false">3</string>
    <string name="pref_enable_images_default" translatable="false">true</string>
    <string name="pref_enable_images_key" translatable="false">pref_enable_images_key</string>
    <string name="pref_enable_images_false_summary">Not enabled</string>
    <string name="pref_enable_images_true_summary">Download city images as background</string>
    <string name="pref_enable_images_label">Download Images</string>
    <string name="pref_notification_type_default">smart</string>
    <string name="pref_enable_sync_all_cities_default">false</string>
    <string name="pref_enable_sync_all_key" translatable="false">pref_enable_sync_all_key</string>
    <string name="pref_enable_sync_all_false_summary">Only update notification city</string>
    <string name="pref_enable_sync_all_true_summary">Update all cities every time</string>
    <string name="pref_enable_sync_all_label">Update All Cities</string>
    <string name="pref_data_sync_frequency_default" translatable="false">3</string>

    <string name="pref_current_photo_cursor_index_key" translatable="false">pref_current_cursor_index_key
         <xliff:g id="cityName">%1$s</xliff:g></string>

    <string name="pref_current_photo_cursor_index_default" translatable="false">0</string>
    <string name="toast_no_more_city_to_delete">There is no more city to delete</string>
    <string name="empty_textview_default_message">Something Wrong Happened :(</string>
    <string name="empty_textview_no_city">Please add a city by tapping the query icon above.</string>
    <string name="empty_textview_server_down">Server is not available</string>
    <string name="empty_textview_server_invalid_id">Cannot find the city in the weather server</string>
    <string name="empty_textview_server_unknown">Something unexpected happened on the weather server :(</string>
    <string name="empty_textview_network_not_available">Network not available</string>
    <string name="pref_is_updated_manually_key" translatable="false">pref_key_is_updated_manually</string>
    <string name="content_description_background_image">Background Image</string>


</resources>